--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "multi-step-form-react",
 	"version": "0.1.0",
 	"private": "false",
-	"homepage": "k1337xz.github.io/multi-step-form-react/",
+	"homepage": "https://k1337xz.github.io/multi-step-form-react/",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
